fixing center align on ipad and middle pixel width screens

--- a/_sass/_layouts.scss
+++ b/_sass/_layouts.scss
@@ -45,8 +45,13 @@ header.global-header {
 
     & ul { 
         list-style: none;
+        @include span-columns(6);
 
-        @include media-query($on-laptop){
+        @media screen and (max-width:1100px){
+            @include span-columns(12);
+        }
+
+        @include media-query($on-palm){
             display: none;
         }
 
@@ -85,13 +90,13 @@ header.global-header {
     display: none;
     text-align: center;
     padding-left: 0;
-    width: 100vw;
 
     & li {
         margin-left: 0;
+        width: 100%;
     }
 
-    @include media-query($on-laptop){
+    @include media-query($on-palm){
         display: block;
     }
 }
@@ -124,7 +129,7 @@ header.global-header {
 
     h2 { text-align: center; }
 
-    @include media-query($on-laptop){
+    @include media-query($on-palm){
         @include span-columns(12);
         @include shift(0);
         position: inherit;
@@ -153,7 +158,7 @@ header.global-header {
 .column#right {
     @include omega;
 
-    @include media-query($on-laptop){
+    @include media-query($on-palm){
         @include shift(0);
     }
 }
@@ -173,7 +178,7 @@ article p span {
 
 #right div.about > div {
     display: block;
-    @include media-query($on-laptop){
+    @include media-query($on-palm){
             display: none;
     }
 }
@@ -181,7 +186,7 @@ article p span {
 #right div.about ~ div {
 
     display: none;
-    @include media-query($on-laptop){
+    @include media-query($on-palm){
             display: block;
     }
 }
